# demoqa-shield

./: .coverage  .gitignore  pyproject.toml  pytest.headless.ini  pytest.ini  readme.md  requirements.txt  tasks.py
lib/framework/: file_handler.py
lib/ui/: elements_page.py  home_page.py
lib/ui/home_page_cmps/: elements_page.py
lib/ui/home_page_cmps/elements_cmps/: check_box.py  check_box_tree_widget.py  text_box.py  text_box_locators.json
lib/ui/home_page_components/: elements_page.py
tests/: test_elements.py
tests/functional/: test_elements.py
tests/unit/: crash.json  test_file_handler.py
