[project]
name = "demoqa_shield"
version = "0.1.0"
description = "A short description of my project"
requires-python = ">=3.12"
dependencies = [
    "playwright",
    "pytest",
    "requests",
    "responses",
    "invoke",
    "pydantic",
    "pytest-playwright"
]


[project.optional-dependencies]
dev = ["ruff"]


[tool.pytest.ini_options]
pythonpath = ["."]
